--- a/styles.css
+++ b/styles.css
@@ -156,7 +156,7 @@ footer {
     'button button button';
 }
 
-@media screen and (max-width: 900px) {
+@media (max-width: 900px) {
     #projects {
         grid-template-areas:
         'header header'
@@ -167,7 +167,20 @@ footer {
     }
 } 
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
+    #projects {
+        grid-template-areas:
+        'header'
+        'document' 
+        'landing'
+        'portfolio' 
+        'survey'
+        'tribute'
+        'button';
+    }
+}
+
+@media screen and (max-width: 425px) {
     #projects {
         grid-template-areas:
         'header'
@@ -258,7 +271,7 @@ footer {
 #contact {
     display: flex;
     flex-direction: column;
-    height: 90vh;
+    height: 800px;
     gap: 20px;
     justify-content: center;
     align-items: center;
