--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ footer {
 .project {
     height: 300px;
     position: relative;
+    border: 0.3px solid var(--main-grey);
 }
 
 .project-title {
@@ -71,9 +72,8 @@ footer {
     padding-top: 20px;
     color: var(--main-white);
     position: absolute;
-    bottom: 0;
+    bottom: 0px;
     width: 100%;
-    border: 0.2px solid var(--main-grey);
 }
 
 .btn {
